version/0.17/_sources/api/solver/_autosummary/settings/reference_frames.rst.txt
:orphan:

.. _reference_frames:

reference_frames
================

.. autoclass:: ansys.fluent.core.solver.settings_232.reference_frames.reference_frames
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

:ref:`display_frame <display_frame>`             Display Reference Frame.

:ref:`hide_frame <hide_frame>`                      Hide Reference Frame.

========================================   ==============================

.. rubric:: Named object type

:ref:`reference_frames_child <reference_frames_child>`


.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

