version/0.20/_sources/api/solver/_autosummary/settings/reference_frames.rst.txt
:orphan:

.. _reference_frames:

reference_frames
================

.. autoclass:: ansys.fluent.core.solver.settings_241.reference_frames.reference_frames
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

:ref:`display_frame <display_frame>`                          Display Reference Frame.

:ref:`hide_frame <hide_frame>`                                   Hide Reference Frame.

==========================================   =========================================

.. rubric:: Named object type

:ref:`reference_frames_child <reference_frames_child>`


.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

